<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="braille_ime_service_name">TalkBack braille keyboard</string>
  <string name="braille_ime_bd_mode_name">Braille display input</string>
  <string name="switch_to_screen_away_announcement">Screen-away mode</string>
  <string name="switch_to_tabletop_announcement">Tabletop mode. Place your device with the charging port to the left.</string>
  <string name="calibration_tip_announcement">To update dot position, hold down %d fingers.</string>
  <string name="bring_ime_settings_page">There is no other keyboard enabled, go to keyboard settings</string>
  <string name="reminder_announcement">Swipe up with 3 fingers for more options</string>
  <string name="switched_to_contracted_announcement">Switched to contracted braille</string>
  <string name="switched_to_uncontracted_announcement">Switched to uncontracted braille</string>
  <string name="braille_ime_displayed_name">braille keyboard</string>
  <string name="multiple_languages_braille_ime_displayed_name">braille keyboard, %s</string>
  <string name="input_view_caption">TalkBack braille keyboard - for help, visit g.co/help/braille</string>
  <string name="perform_action_next">Next</string>
  <string name="perform_action_submitting">Submitting text</string>
  <string name="calibration_step1_hold_left_or_right_finger_announcement">Updating dot position. First, let’s record the dots on your %s.</string>
  <string name="calibration_hold_left_or_right_three_finger_announcement">Touch and hold the screen with the middle 3 fingers of your %s.</string>
  <string name="calibration_hold_left_or_right_four_finger_announcement">Touch and hold the screen with the last 4 fingers of your %s.</string>
  <string name="calibration_finish_announcement">Dot position updated</string>
  <string name="remaining_calibration_finish_announcement">All dot positions updated</string>
  <string name="calibration_step2_hold_left_or_right_finger_announcement">Updated positions for dots 1, 2, and 3. Next, let’s record the dots on your %s.</string>
  <string name="eightDot_braille_calibration_step2_hold_left_or_right_finger_announcement">Updated positions for dots 1, 2, 3, and 7. Next, let’s record the dots on your %s.</string>
  <string name="calibration_fail_announcement">Couldn’t update dot position.</string>
  <string name="calibration_fail_try_again_announcement">Touch and hold the screen with %d fingers. Then try again.</string>
  <string name="left_hand">left hand</string>
  <string name="right_hand">right hand</string>
  <string name="switch_to_language_announcement">Switched to %s</string>
  <string name="braille_keyboard">Braille keyboard</string>
  <string name="set_up_braille_keyboard">Set up braille keyboard</string>
  <string name="how_to_use_braille_keyboard">How to use braille keyboard</string>
  <string name="use_brailleime_pref_dialog_case_ime_enabled">To use the braille keyboard, open your regular keyboard, then tap the choose keyboard icon %1$s (usually in the bottom right corner). Select \"%2$s.\"
  &lt;br>&lt;br>If you don’t see an option to switch keyboards, try installing %3$s, the Google keyboard.</string>
  <string name="use_brailleime_pref_dialog_case_ime_disabled_settings">
    1. Tap \"Settings\" below. On the next screen, turn on \"%1$s\"&lt;br>&lt;br>
    2. Open your regular keyboard, then tap switch input method %2$s (usually in the bottom right corner).&lt;br>&lt;br>
    3. Select \"%1$s.\"
    &lt;br>&lt;br>If you don’t see an option to switch keyboards, try installing %3$s, the Google keyboard.
  </string>
  <string name="use_brailleime_pref_dialog_case_ime_disabled_turn_on">
    1. Turn on braille keyboard below.&lt;br>&lt;br>
    2. Open your regular keyboard, then tap switch input method %2$s (usually in the bottom right corner).&lt;br>&lt;br>
    3. Select \"%1$s\".
    &lt;br>&lt;br>If you can\'t switch keyboards, try installing %3$s, the Google keyboard.
  </string>
  <string name="gboard_name" translatable="false">Gboard</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_settings">Settings</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_turn_on">Turn on</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_turn_on_announcement">Turn on braille keyboard</string>
  <string name="review_all_gestures_title">Review all gestures</string>
  <string name="preferred_languages_title">Languages</string>
  <string name="preferred_typing_language_title">Preferred typing language</string>
  <string name="preferred_braille_grade_title">Preferred braille grade</string>
  <string name="switch_input_code_gesture_tip_dialog_title">Quickly change language while typing</string>
  <string name="switch_input_code_gesture_tip_dialog_message">To change your language while typing with the braille keyboard, swipe up with 3 fingers. Then select \"switch to next language\".</string>
  <string name="title_pref_accumulate_presses">Include all pressed dots</string>
  <string name="summary_pref_accumulate_presses">Each pressed dot is part of the input, even if the dot is released before other dots</string>
  <string name="title_pref_reverse_dots">Reverse dots</string>
  <string name="summary_pref_reverse_dots">Swap the dot positions, so that dots 1 and 4 trade places, for example</string>
  <string name="bd_preference_braille_contracted">Contracted braille</string>
  <string name="bd_preference_braille_uncontracted">Uncontracted braille</string>
  <string name="context_menu_title">Braille keyboard options</string>
  <string name="context_menu_input_language_selection">Switch to next language: %s</string>
  <string name="context_menu_input_language_selection_summary">Currently using: %s</string>
  <string name="context_menu_switch_contracted_status_selection">Switch to %s braille</string>
  <string name="contracted">contracted</string>
  <string name="uncontracted">uncontracted</string>
  <string name="context_menu_review_gestures_selection">Review gestures</string>
  <string name="context_menu_tutorial_selection">Open tutorial</string>
  <string name="context_menu_tutorial_finish">Finish tutorial</string>
  <string name="context_menu_settings_selection">Settings</string>
  <string name="context_menu_layout_selection">Layout</string>
  <string name="context_menu_layout_calibration">Update dot positions</string>
  <string name="braille_keyboard_gestures">Braille keyboard gestures</string>
  <string name="basic_gestures">Basic gestures</string>
  <string name="gesture_add_space">To add a <b>space</b>, swipe right</string>
  <string name="gesture_delete">To <b>delete</b>, swipe left</string>
  <string name="gesture_new_line">For a <b>new line</b>, swipe right with 2 fingers</string>
  <string name="gesture_delete_word">To <b>delete a word</b>, swipe left with 2 fingers</string>
  <string name="gesture_move_cursor_backward">To <b>move the cursor backward</b>, swipe up</string>
  <string name="gesture_move_cursor_forward">To <b>move the cursor forward</b>, swipe down</string>
  <string name="gesture_hide_keyboard">To <b>hide the keyboard</b>, swipe down with 2 fingers</string>
  <string name="gesture_next_keyboard">To switch to the <b>next keyboard</b>, swipe down with 3 fingers</string>
  <string name="gesture_submit_text">To <b>submit text</b>, swipe up with 2 fingers</string>
  <string name="gesture_open_context_menu">For <b>help and other options</b>, swipe up with 3 fingers</string>
  <string name="all_gestures">All gestures</string>
  <string name="braille_keyboard_basic_controls">Basic controls</string>
  <string name="braille_keyboard_basic_controls_summary">Add spaces, delete, hide the keyboard, and more</string>
  <string name="braille_keyboard_cursor_movement">Cursor movement</string>
  <string name="braille_keyboard_cursor_movement_description">You can switch granularity to have your cursor move by character, word, or line. Or control how your cursor moves with a series of gestures that include braille dots.</string>
  <string name="braille_keyboard_cursor_movement_summary">Move by character, word, or line</string>
  <string name="braille_keyboard_text_selection_and_editing">Text selection and editing</string>
  <string name="braille_keyboard_text_selection_and_editing_summary">Select, copy, cut, paste</string>
  <string name="braille_keyboard_spell_check">Proofreading</string>
  <string name="braille_keyboard_spell_check_summary">Check the spelling and grammar within a text box</string>
  <string name="braille_keyboard_spell_check_description">You can use proofreading to check for spelling and grammar suggestions. When you’re typing or editing text, use 3 fingers to swipe left or right until you hear \"Proofread\".</string>
  <string name="bk_gesture_add_space">To add a space, swipe right</string>
  <string name="bk_gesture_delete">To delete, swipe left</string>
  <string name="bk_gesture_new_line">For a new line, swipe right with 2 fingers</string>
  <string name="bk_gesture_delete_word">To delete a word, swipe left with 2 fingers</string>
  <string name="bk_gesture_move_cursor_backward">To move the cursor backward, swipe up</string>
  <string name="bk_gesture_move_cursor_forward">To move the cursor forward, swipe down</string>
  <string name="bk_gesture_hide_the_keyboard">To hide the keyboard, swipe down with 2 fingers</string>
  <string name="bk_gesture_switch_to_next_keyboard">To switch to the next keyboard, swipe down with 3 fingers</string>
  <string name="bk_gesture_submit_text">To submit text, swipe up with 2 fingers</string>
  <string name="bk_gesture_help_and_other_options">For help and other options, swipe up with 3 fingers</string>
  <string name="bk_pref_category_title_character">Character</string>
  <string name="bk_pref_category_title_word">Word</string>
  <string name="bk_pref_category_title_line">Line</string>
  <string name="bk_pref_category_title_place_on_page">Place on page</string>
  <string name="bk_pref_category_title_granularity">Granularity</string>
  <string name="bk_pref_category_title_editing">Editing</string>
  <string name="bk_gesture_move_to_previous_character">• Move to previous character: Hold dot 6, then swipe up anywhere with another finger</string>
  <string name="bk_gesture_move_to_next_character">• Move to next character: Hold dot 6, then swipe down anywhere with another finger</string>
  <string name="bk_gesture_move_to_previous_word">• Move to previous word: Hold dot 5, then swipe up anywhere with another finger</string>
  <string name="bk_gesture_move_to_next_word">• Move to next word: Hold dot 5, then swipe down anywhere with another finger</string>
  <string name="bk_gesture_move_to_previous_line">• Move to previous line: Hold dot 4, then swipe up anywhere with another finger</string>
  <string name="bk_gesture_move_to_next_line">• Move to next line: Hold dot 4, then swipe down anywhere with another finger</string>
  <string name="bk_gesture_move_to_beginning">• Move to beginning: Hold dots 4 and 5, then swipe up anywhere with another finger</string>
  <string name="braille_tutorial_title">Braille keyboard tutorial</string>
  <string name="tutorial_intro_description">With the braille keyboard, you can tap your screen to enter 6-dot braille.\n\nYou’re using Unified English Braille. To switch your typing language, go to TalkBack settings.\n\nTo type braille, you need to hold and use your phone differently.</string>
  <string name="next_step">Next</string>
  <string name="leave_keyboard">Leave braille keyboard</string>
  <string name="braille_keyboard_strip_summary">An external braille display is connected, which you can use to type text into your phone.\n\nYou can also switch to the touchscreen braille keyboard or the next input method.</string>
  <string name="braille_keyboard_strip_touch_screen_button">Switch to braille touchscreen</string>
  <string name="braille_keyboard_strip_next_keyboard_button">Switch to next input method</string>
</resources>