<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tutorial_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/tutorial_horizontal_padding"
    android:paddingTop="@dimen/tutorial_vertical_padding"
    android:paddingEnd="@dimen/tutorial_horizontal_padding">
  <TextView
      android:id="@+id/tutorial_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/braille_tutorial_title"
      android:textColor="@color/google_white"
      android:textSize="@dimen/tutorial_title_text_size"
      android:textStyle="bold" />
  <ImageView
      android:id="@+id/tutorial_animation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/tutorial_animation_margin"
      android:layout_marginBottom="@dimen/tutorial_animation_margin"
      android:src="@drawable/intro_animation" />
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:paddingBottom="@dimen/tutorial_vertical_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="@string/tutorial_intro_description"
        android:textColor="@color/google_white"
        android:textSize="@dimen/tutorial_description_text_size" />
  </ScrollView>
  <Button
      android:id="@+id/next_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/tutorial_button_margin"
      android:background="@color/tutorial_button_background"
      android:text="@string/next_step"
      android:textSize="@dimen/tutorial_description_text_size" />
  <Button
      android:id="@+id/leave_keyboard_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/tutorial_button_margin"
      android:background="@color/google_transparent"
      android:text="@string/leave_keyboard"
      android:textColor="@color/tutorial_leave_button_text_color"
      android:textSize="@dimen/tutorial_description_text_size" />
</LinearLayout>
